bug avoided chat input overlaping with char count issue 55

--- a/hosting/src/app/widgets/chat/chat.component.scss
+++ b/hosting/src/app/widgets/chat/chat.component.scss
@@ -43,6 +43,7 @@
                 font-size: 1em;
                 appearance: none;
                 padding: $input-padding ($input-padding * 1.5);
+                padding-right: 55px;
                 box-sizing: border-box;
                 border-radius: $border-radius;
                 border: 1px solid $brand-secondary-dark;
